--- a/css/3.css
+++ b/css/3.css
@@ -2,7 +2,7 @@
 .Tableau span {
    display:inline;
    float:left;
-   border:2px solid #FF6600;
+   border:1px solid #D9D9D9;
    margin:0px;
    padding:3px;
   }
@@ -13,18 +13,24 @@
    height:100%; height:1em;
   }
 .Tableau p.legende {font-weight:bold}
-.Tableau span.col1 {width:150px}
+.Tableau span.col1 {width:160px}
 .Tableau span.col2 {width:120px}
-.Tableau span.col3 {width:90px}
+.Tableau span.col3 {width:100px}
 p {
 font-family: arial, verdana, sans-serif;
-font-size: 14pt;
+font-size: 12pt;
 }
 
 .dessus {
 text-decoration: overline ;
 }
-a {
+
+a{
 text-decoration: none;
-color: red;
+color: green;
+}
+
+a.nounderline:link {
+text-decoration: none;
+color: green;
 }
