--- a/css/cssID.css
+++ b/css/cssID.css
@@ -1,8 +1,21 @@
-#menu {
-background-color:silver;
-width:1100px;
+#menu1 {
+background-color: silver;
 float:left;
+width: 100%;
 }
+
 #contenu {
-margin-left:110px;
+margin-top:50px;
+margin-left:10px;
+margin-bottom:50px;
+width: 95%;
+}
+
+#imageindex {
+  width: 100%;
+}
+
+#image1, #image2, #image3 {
+  width: 40;
+  height: 40;
 }
